added script and matching card function

--- a/index.html
+++ b/index.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- the below meta tag is default in most modern browsers. however if you have an
-  older browser, the emojis may not show up properly. In which case you need this meta
-  tag. Read more here: https://teamtreehouse.com/community/meta-charsetutf8-what-does-this-mean-or-what-does-it-do-i-deleted-it-from-the-code-and-nothing-changed -->
   <meta charset="utf-8" >  
-  <title>Grid Master</title>
+  <title>Card Matching Game</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Autour+One&display=swap" rel="stylesheet">
+  <script defer src="./script.js"></script>
 </head>
 <body>
-  <div class="container">
-    <div class="zone green">🦊</div>
-    <div class="zone red">🐰</div>
-    <div class="zone blue">🐸</div>
-    <div class="zone yellow">🦁</div>
-    <div class="zone purple">🐯</div>
-    <div class="zone brown">🐭</div>
-    <div class="zone green">🦄</div>
-    <div class="zone red">🐲</div>
-    <div class="zone blue">🐷</div>
-    <div class="zone yellow">🐺</div>
-    <div class="zone purple">🐼</div>
-    <div class="zone brown">🐻</div>
-    <div class="zone green">🦊</div>
-    <div class="zone red">🐰</div>
-    <div class="zone blue">🐸</div>
-    <div class="zone yellow">🦁</div>
-    <div class="zone purple">🐯</div>
-    <div class="zone brown">🐭</div>
-    <div class="zone green">🦄</div>
-    <div class="zone red">🐲</div>
-    <div class="zone blue">🐷</div>
-    <div class="zone yellow">🐺</div>
-    <div class="zone purple">🐼</div>
-    <div class="zone brown">🐻</div>
-  </div>
+  <header>
+    <h1>Card Matching Game</h1>
+    <button id="startBtn">Start Game</button>
+  </header>
+  <section class="container">
+    <div class="cards">      
+      <div class="card green">🍭</div>
+      <div class="card red">🍱</div>
+      <div class="card blue">🍣</div>
+      <div class="card yellow">🍧</div>
+      <div class="card purple">🌈</div>
+      <div class="card brown">🍱</div>
+      <div class="card green">🍙</div>
+      <div class="card red">🍥</div>
+      <div class="card blue">🥞</div>
+      <div class="card yellow">🍥</div>
+      <div class="card purple">🍩</div>
+      <div class="card brown">🍣</div>
+      <div class="card green">🍭</div>
+      <div class="card red">🍩</div>
+      <div class="card blue">🍣</div>
+      <div class="card yellow">🍧</div>
+      <div class="card purple">🌈</div>
+      <div class="card brown">🍱</div>
+      <div class="card green">🍙</div>
+      <div class="card red">🍱</div>
+      <div class="card blue">🥞</div>
+      <div class="card yellow">🍥</div>
+      <div class="card purple">🍱</div>
+      <div class="card brown">🍣</div>
+    </div>  
+  </section>
 </body>
 </html>
